--- a/styles.css
+++ b/styles.css
@@ -471,6 +471,44 @@ footer {
 }
 
 @media  (min-width: 768px) {
+  .menu-icon {
+		display: none;
+	}
+
+	.close-icon {
+		display: none;
+	}
+
+.dropdown-menu {
+	ul {
+		display: flex;
+		flex-wrap: wrap;
+		gap: 20px;
+		margin: 0;
+		padding: 0;
+		justify-content: flex-end;
+	}
+
+	a {
+		font-family: "Arial", sans-serif;
+		font-style: italic;
+		font-weight: 400;
+		line-height: 150%;
+		font-size: 17px;
+		color: #ffffff;
+		text-decoration: none;
+	}
+
+	li {
+		list-style-type: none;
+		cursor: pointer;
+
+		&:hover {
+			opacity: 0.6;
+		}
+	}
+}
+
   .main-footer {
 		min-width: 768px;
 		padding: 35px 30px;
@@ -680,8 +718,10 @@ footer {
 }
 
 @media (max-width: 767px) {
-	.menu-icon .menu-img {
-		outline: #ffffff;
+	.menu-icon {
+		width: 20px;
+		height: 20px;
+		margin-top: 5px;
 	}
 	
 	.dropdown-menu {
@@ -693,6 +733,10 @@ footer {
     display: none;
     z-index: 1000;
   }
+
+	.close-icon {
+    transform: translateY(13px);
+	}
 
   .dropdown-menu ul {
     list-style: none;
@@ -1014,5 +1058,19 @@ footer {
 		  line-height: 150%;
 		  font-size: 24px;
 	  }
+	}
+
+	.dropdown-menu {
+		ul {
+			display: flex;
+			flex-wrap: wrap;
+			gap: 28px;
+			width: 430px;
+			margin-top: 12px;
+		}
+	
+		a {
+			font-size: 23px;
+		}
 	}
 }
